# flightmemory-to-openflight-csv

./: .gitignore  README.md  pyproject.toml
doc/: flightmemory-html-format.md  flightmemory-pdf-format.md
src/flightmemory_to_openflight_csv/: __init__.py  _core.py  cli.py  convert.py  html.py  pdf.py  pdf_parser.py
tests/: test_convert.py  test_parsers.py
tests/fixtures/: sample_flightdata.html
