[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flightmemory-to-openflight-csv"
version = "0.1.0"
description = "Convert FlightMemory HTML exports to OpenFlights CSV format"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["beautifulsoup4"]

[project.scripts]
flightmemory-to-openflight-csv = "flightmemory_to_openflight_csv.convert:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flightmemory_to_openflight_csv"]

[project.optional-dependencies]
dev = ["pytest"]
pdf = ["pdfplumber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
